--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -62,7 +62,7 @@
       </div>
 
       <div>
-        <button class="content"> <mat-icon>person</mat-icon> Cuenta</button>
+        <button class="content" [routerLink]="['/ingresar']"> <mat-icon>person</mat-icon> Cuenta<span class="flecha"></span></button>
         <button class="content" [routerLink]="['/carrito']"> <mat-icon>shopping_cart</mat-icon> Carrito</button>
       </div>
 
