--- a/src/app/screens/Store/cart/cart.component.scss
+++ b/src/app/screens/Store/cart/cart.component.scss
@@ -21,7 +21,7 @@
 
 .checkout-products {
   margin-bottom: 30px;
-  border: 1px solid #ddd;
+  border: 2px solid #ddd;
   border-radius: 5px;
   padding: 20px;
 }
@@ -119,4 +119,17 @@
 
 .checkout-shipping h3 {
   margin-bottom: 15px;
+}
+
+.title-style {
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-weight: 700;
+  font-size: 20px;
+  color: hsl(52, 0%, 98%);
+}
+
+.title-quote {
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-weight: 400;
+  color: hsl(52, 0%, 98%);
 }
