--- a/src/app/screens/Store/products/products.component.html
+++ b/src/app/screens/Store/products/products.component.html
@@ -48,6 +48,7 @@
             (click)="goToProductInfo(product)">{{product?.title}}</span>
           <span class="card-price">{{product?.price_formatted}}</span>
         </div>
+        <span class="stock">Disponibles: {{product.stock}}</span>
         <div class="valoracion">
           <span class="estrella">&#9733;</span>
           <span class="estrella">&#9733;</span>
