--- a/src/app/screens/Store/products/products.component.scss
+++ b/src/app/screens/Store/products/products.component.scss
@@ -282,3 +282,8 @@
   text-decoration: none;
   display: block;
 }
+
+.container .grid-container .card
+.product-content .stock {
+  color: rgb(185, 183, 183);
+}
